--- a/app/src/main/res/menu/menu_counter.xml
+++ b/app/src/main/res/menu/menu_counter.xml
@@ -1,5 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/counter_change"
+        android:title="" />
+
     <item android:id="@+id/counter_delete"
         android:icon="@mipmap/ic_menu_delete"
         android:title="delete counter" />
